Update project configuration and documentation
- Enhance .editorconfig for consistent coding styles
- Refine .gitignore to exclude unnecessary files
- Add CI workflow configuration for testing and building
- Implement release workflow for automated versioning
- Create comprehensive development guide
- Include Apache License text
- Add Taskfile for build and development tasks

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,26 +1,46 @@
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
-charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+charset = utf-8
 trim_trailing_whitespace = true
 
-[*.{go,mod,sum}]
+# Go files
+[*.go]
 indent_style = tab
 indent_size = 4
 
+# QASM files
+[*.qasm]
+indent_style = space
+indent_size = 2
+
+# Markdown files
+[*.md]
+trim_trailing_whitespace = false
+indent_style = space
+indent_size = 2
+
+# YAML files
 [*.{yml,yaml}]
 indent_style = space
 indent_size = 2
 
-[*.{json,md}]
+# Grammar files
+[*.g4]
+indent_style = space
+indent_size = 4
+
+# Shell scripts
+[*.sh]
 indent_style = space
 indent_size = 2
 
-[{Makefile,Taskfile*}]
-indent_style = tab
-
-[*.qasm]
-indent_style = space
-indent_size = 2
+# Test files
+[testdata/**]
+insert_final_newline = false
