--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -50,12 +50,14 @@ tasks:
     cmds:
       - mkdir -p {{.BUILD_DIR}}
       - go build -ldflags "-X github.com/orangekame3/qasmtools/cmd.Version={{.VERSION}} -X github.com/orangekame3/qasmtools/cmd.Commit={{.COMMIT}} -X github.com/orangekame3/qasmtools/cmd.BuildDate={{.BUILD_DATE}}" -o {{.BUILD_DIR}}/{{.BINARY_NAME}} ./cmd/qasm
+      - go build -o {{.BUILD_DIR}}/qasmlsp ./cmd/qasmlsp
     sources:
       - "**/*.go"
       - go.mod
       - go.sum
     generates:
       - "{{.BUILD_DIR}}/{{.BINARY_NAME}}"
+      - "{{.BUILD_DIR}}/qasmlsp"
 
   build:all:
     desc: Build for all platforms
