--- a/vscode-qasm/language-configuration.json
+++ b/vscode-qasm/language-configuration.json
@@ -25,5 +25,6 @@
     "indentationRules": {
         "increaseIndentPattern": "^.*\\{[^}]*$",
         "decreaseIndentPattern": "^\\s*\\}"
-    }
+    },
+    "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
 }
