Refactor linting rules and implement new checks
- Removed unused qubit checker and related YAML rule files (QAS001).
- Introduced new checks for insufficient classical bits (QAS002), constant measured bits (QAS003), exceeding qubit limits (QAS004), and naming conventions (QAS005).
- Updated the factory method to create appropriate checkers based on rule IDs.
- Enhanced the linter to support program-level analysis for certain rules.
- Added integration tests to validate linting functionality across various scenarios.
- Created test data files to cover different violation cases for comprehensive testing.

--- a/lint/rules/QAS001_unused_qubit.yaml
+++ b/lint/rules/QAS001_unused_qubit.yaml
@@ -1,6 +1,6 @@
 id: QAS001
-name: no-unused-qubit
-description: "Detects qubits that are declared but never used."
+name: unused-qubit
+description: "Detects qubits that are declared but never used in gates or measurements."
 level: warning
 enabled: true
 
@@ -13,5 +13,5 @@ check:
     not_found: true
 
 message: "Qubit '{{ name }}' is declared but never used."
-tags: [qasm3, readability]
+tags: [qasm3, readability, unused-variables]
 fixable: false
