--- a/lint/rules/QAS003_constant_measured_bit.yaml
+++ b/lint/rules/QAS003_constant_measured_bit.yaml
@@ -16,3 +16,4 @@ check:
 message: "Measuring qubit '{{ name }}' that has not been affected by any gates will always yield |0⟩."
 tags: [qasm3, logic, measurement, constant-results]
 fixable: false
+documentation_url: "https://github.com/orangekame3/qasmtools/blob/main/docs/rules/QAS003.md"
