--- a/lint/rules/QAS004_exceeding_qubit_limits.yaml
+++ b/lint/rules/QAS004_exceeding_qubit_limits.yaml
@@ -15,3 +15,4 @@ check:
 message: "Array index out of bounds: {{ issue }}"
 tags: [qasm3, bounds-checking, array-access]
 fixable: false
+documentation_url: "https://github.com/orangekame3/qasmtools/blob/main/docs/rules/QAS004.md"
