--- a/playground/package.json
+++ b/playground/package.json
@@ -6,21 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --strict"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "next": "15.3.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "@monaco-editor/react": "^4.6.0"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.12.14",
+    "eslint": "9.30.0",
+    "eslint-config-next": "15.3.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
