Remove unused configurations and simplify .goreleaser.yml for better clarity

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,6 @@
 version: 2
 
-git:
-  ignore_tags:
-    - nightly
+project_name: qasmtools
 
 before:
   hooks:
@@ -28,10 +26,10 @@ builds:
     ldflags:
       - -s -w
       - -X main.Version={{.Version}}
-      - -X main.GitCommit={{.FullCommit}}
+      - -X main.GitCommit={{.ShortCommit}}
       - -X main.BuildDate={{.Date}}
 
-  # LSP Server
+  # LSP Server  
   - id: qasmlsp
     main: ./cmd/qasmlsp
     binary: qasmlsp
@@ -40,122 +38,47 @@ builds:
     goos:
       - linux
       - darwin
-      - windows
     goarch:
       - amd64
       - arm64
-    ignore:
-      - goos: windows
-        goarch: arm64
-      - goos: windows
-        goarch: amd64
     ldflags:
       - -s -w
 
 archives:
-  - id: qasm
-    builds: [qasm]
+  - format: tar.gz
     name_template: >-
       {{ .ProjectName }}_
       {{- title .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
     format_overrides:
       - goos: windows
         format: zip
-      - goos: linux
-        format: tar.gz
-      - goos: darwin
-        format: tar.gz
-    files:
-      - README.md
-      - LICENSE
-
-  - id: qasmlsp
-    builds: [qasmlsp]
-    name_template: >-
-      {{ .ProjectName }}-lsp_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
-    format_overrides:
-      - goos: windows
-        format: zip
-      - goos: linux
-        format: tar.gz
-      - goos: darwin
-        format: tar.gz
-    files:
-      - README.md
-      - LICENSE
 
 checksum:
   name_template: 'checksums.txt'
 
 snapshot:
-  version_template: "{{ incpatch .Version }}-next"
-
-nfpms:
-  - id: qasm
-    builds: [qasm]
-    package_name: qasmtools
-    vendor: orangekame3
-    homepage: https://github.com/orangekame3/qasmtools
-    maintainer: orangekame3 <orange.three333@gmail.com>
-    description: |-
-      QASM tools for formatting, linting, and parsing OpenQASM 3.0 files.
-      Provides command-line tools for quantum assembly language development.
-    license: Apache 2.0
-    formats:
-      - deb
-      - rpm
+  name_template: "{{ incpatch .Version }}-next"
 
 changelog:
   sort: asc
-  use: github
   filters:
     exclude:
       - '^docs:'
       - '^test:'
-      - '^ci:'
-      - '^chore:'
-      - '^refactor:'
-      - '^style:'
-      - Merge pull request
-      - Merge branch
-  groups:
-    - title: Features
-      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
-      order: 0
-    - title: 'Bug fixes'
-      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
-      order: 1
-    - title: 'Performance improvements'
-      regexp: '^.*?perf(\([[:word:]]+\))??!?:.+$'
-      order: 2
-    - title: Others
-      order: 999
 
-homebrew:
+brews:
   - repository:
       owner: orangekame3
       name: homebrew-tap
       token: "{{ .Env.TAP_GITHUB_TOKEN }}"
-    ids: [qasm]
     homepage: "https://github.com/orangekame3/qasmtools"
     description: "QASM tools for formatting, linting, and parsing OpenQASM 3.0 files"
     license: "Apache-2.0"
-    commit_author:
-      name: goreleaserbot
-      email: bot@goreleaser.com
     test: |
       system "#{bin}/qasm", "--version"
-    install: |
-      bin.install "qasm"
 
 dockers:
   - image_templates:
@@ -163,7 +86,7 @@ dockers:
       - "ghcr.io/orangekame3/qasmtools:latest"
     dockerfile: |
       FROM alpine:latest
-      RUN apk --no-cache add ca-certificates git
+      RUN apk --no-cache add ca-certificates
       WORKDIR /root/
       COPY qasm /usr/local/bin/
       ENTRYPOINT ["/usr/local/bin/qasm"]
@@ -173,56 +96,4 @@ dockers:
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
       - "--label=org.opencontainers.image.source=https://github.com/orangekame3/qasmtools"
-      - "--label=org.opencontainers.image.description=QASM tools for formatting, linting, and parsing OpenQASM 3.0 files"
       - "--label=org.opencontainers.image.licenses=Apache-2.0"
-    ids:
-      - qasm
-
-release:
-  github:
-    owner: orangekame3
-    name: qasmtools
-  header: |
-    ## QASM Tools {{ .Tag }}
-
-    This release includes:
-    - CLI tool (`qasm`) for formatting, linting, and syntax highlighting
-    - LSP server (`qasmlsp`) for VSCode integration
-    - Web playground with WebAssembly support
-    - VSCode extension for OpenQASM 3.0 language support
-
-    ### Installation
-
-    #### Homebrew (macOS/Linux)
-    ```bash
-    brew install orangekame3/tap/qasmtools
-    ```
-
-    #### Direct Download
-    Download the appropriate archive for your platform from the assets below.
-
-    #### Docker
-    ```bash
-    docker run --rm -v $(pwd):/workspace ghcr.io/orangekame3/qasmtools:{{ .Tag }} fmt /workspace/*.qasm
-    ```
-
-  footer: |
-    **Full Changelog**: https://github.com/orangekame3/qasmtools/compare/{{ .PreviousTag }}...{{ .Tag }}
-
-    ---
-
-    🚀 Try the [Web Playground](https://orangekame3.github.io/qasmtools/) for interactive QASM formatting!
-
-    📦 VSCode Extension: Search for "QASM" in the VSCode Extension Marketplace or install from the `.vsix` file included in this release.
-
-  extra_files:
-    - glob: ./vscode-qasm/*.vsix
-      name_template: "{{ .ProjectName }}-vscode-extension-{{ .Version }}.vsix"
-
-announce:
-  skip: "{{ gt .Patch 0 }}"  # Only announce major and minor releases
-
-milestones:
-  - close: true
-    fail_on_error: false
-    name_template: "{{ .Tag }}"
